# clean-logger

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Clean_logger.md  README.md  pyproject.toml
agents/: initial_Clean_logger.md  session-ses_21a4.md  session-ses_21a5.md  session-ses_21a7.md  session-ses_2219.md  session-ses_221c.md
docs/: commit_types.pyi  conventional-commits-cheatsheet.md
src/clean_logger/: __main__.py
src/clean_logger/application/ports/: logger.py
src/clean_logger/application/use_cases/: create_order.py
src/clean_logger/infrastructure/logging/: adapters.py  config.py  context.py  context_formatter.py  listener.py
src/clean_logger/presentation/: cli.py
tests/: test_fakes.py
